<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="leak_canary_analysis_failed">Leak analysis failed</string>
    <string name="leak_canary_class_has_leaked">%1$s leaked %2$s</string>
    <string name="leak_canary_could_not_save_text">LeakCanary was unable to save the analysis result.</string>
    <string name="leak_canary_could_not_save_title">Could not save result.</string>
    <string name="leak_canary_delete">Delete</string>
    <string name="leak_canary_delete_all">Delete all</string>
    <string name="leak_canary_display_activity_label">Leaks</string>
    <string name="leak_canary_excluded_row">[Excluded] %s</string>
    <string name="leak_canary_failure_report">"Please report this failure to http://github.com/square/leakcanary
"</string>
    <string name="leak_canary_leak_excluded">[Excluded] %1$s leaked %2$s</string>
    <string name="leak_canary_leak_list_title">Leaks in %s</string>
    <string name="leak_canary_no_leak_text">The GC was being lazy.</string>
    <string name="leak_canary_no_leak_title">No leak found</string>
    <string name="leak_canary_notification_message">Click for more details</string>
    <string name="leak_canary_permission_notification_text">Click to enable storage permission for %s.</string>
    <string name="leak_canary_permission_notification_title">Leak detected, need permission</string>
    <string name="leak_canary_share_heap_dump">Share heap dump</string>
    <string name="leak_canary_share_leak">Share info</string>
    <string name="leak_canary_share_with">Share with…</string>
    <string name="leak_canary_storage_permission_activity_label">Storage permission</string>
    <string name="leak_canary_toast_heap_dump">Dumping memory, app will freeze. Brrrr.</string>
    <string name="Cancel">Cancel</string>
    <string name="MR_Error_text">Something Bad Happened!</string>
    <string name="MR_Tap_retry_text">Tap to Retry</string>
    <string name="action_demo">Demo</string>
    <string name="action_exit">Exit</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Test App</string>
    <string name="axis_bank">AXIS</string>
    <string name="bank_prompt">Select your Bank</string>
    <string name="cancel">Cancel</string>
    <string name="cardType_prompt">Select Card Type</string>
    <string name="card_number_format">xxxx-xxxx-xxxx-xxxx</string>
    <string name="cb_ac_debited_twice">* Your account may be debited twice if you retry.</string>
    <string name="cb_approve_otp">Approve</string>
    <string name="cb_authenticate_with">Select an option for Faster Payment</string>
    <string name="cb_b_cancel">Cancel</string>
    <string name="cb_bank_logo">Bank LOGO</string>
    <string name="cb_bank_page_loading">Please wait. Bank page is loading..</string>
    <string name="cb_btn_action">btn_action</string>
    <string name="cb_btn_text">btn_text</string>
    <string name="cb_button">Button</string>
    <string name="cb_cancel">cancel</string>
    <string name="cb_cancel_transaction">Cancel Transaction</string>
    <string name="cb_card_not_registered_with_pin">Your card has not been registered for PIN yet. Do you want to continue with PIN?</string>
    <string name="cb_checkbox">checkbox</string>
    <string name="cb_choose">choose</string>
    <string name="cb_confirm_transaction">Confirm Transaction</string>
    <string name="cb_detect_bank">detectBank</string>
    <string name="cb_detect_otp">detectOtp</string>
    <string name="cb_enter_caps_otp">Enter OTP</string>
    <string name="cb_enter_manually">Enter Manually</string>
    <string name="cb_enter_otp">enterOTP</string>
    <string name="cb_enter_otp_c">Enter OTP</string>
    <string name="cb_enter_pin">enterPIN</string>
    <string name="cb_error">error</string>
    <string name="cb_error_title">ERROR_TITLE</string>
    <string name="cb_find_otp">findOtp</string>
    <string name="cb_hide">hide</string>
    <string name="cb_incorrect_OTP_2">incorrectOTP</string>
    <string name="cb_incorrect_otp_e">Incorrect OTP!</string>
    <string name="cb_incorrect_password">Incorrect Password</string>
    <string name="cb_incorrect_pin">incorrectPIN</string>
    <string name="cb_init">init</string>
    <string name="cb_nb_image">net banking image</string>
    <string name="cb_no_internet">NO INTERNET CONNECTIVITY</string>
    <string name="cb_no_internet_error">Oops.. something bad happened</string>
    <string name="cb_otp">otp</string>
    <string name="cb_otp_received">OTP Received</string>
    <string name="cb_password">PASSWORD</string>
    <string name="cb_password_value">Password</string>
    <string name="cb_payu_icon">PayU icon</string>
    <string name="cb_payu_response">payu_response</string>
    <string name="cb_pin">pin</string>
    <string name="cb_please_wait">Please Wait</string>
    <string name="cb_populate_user_id">populate_user_id</string>
    <string name="cb_powered_by">Powered by</string>
    <string name="cb_process_otp">process_otp</string>
    <string name="cb_process_request">Processing Your Request</string>
    <string name="cb_pwd_btn">pwd_btn</string>
    <string name="cb_receive_sms">Did you receive a SMS from your bank?</string>
    <string name="cb_regen_otp">regenerate_otp</string>
    <string name="cb_regenerate">regenerate</string>
    <string name="cb_regenerate_otp">Regenerate OTP</string>
    <string name="cb_regenerate_otp_text">It is taking long.You may…</string>
    <string name="cb_register">register</string>
    <string name="cb_register_for_pin">REGISTER FOR PIN</string>
    <string name="cb_register_option">registerOption</string>
    <string name="cb_registeration_detail">Enter your registration details</string>
    <string name="cb_remember_user">Remember User ID</string>
    <string name="cb_result">result</string>
    <string name="cb_resuming_transaction">Resuming transaction please wait</string>
    <string name="cb_retry">retry…</string>
    <string name="cb_retry_otp">retryOTP</string>
    <string name="cb_retry_restart">Or you can retry now to restart your transaction.</string>
    <string name="cb_retry_transaction">Retry Now</string>
    <string name="cb_show_password">Show password</string>
    <string name="cb_skip_screen">skipScreen</string>
    <string name="cb_slow_internet_confirmation">Due to slower internet on your mobile device, we were unable to receive a confirmation from the bank.</string>
    <string name="cb_slownetwork_status">You are on a slow network that may have caused this transaction to fail. We will notify you when your network is ready to process the transaction.</string>
    <string name="cb_sms_otp">SMS OTP</string>
    <string name="cb_snooze">Snooze</string>
    <string name="cb_snooze_cookie">Cookie</string>
    <string name="cb_snooze_network_down_message">"We were not able to detect a better network to resume the transaction.
You may retry in a few minutes."</string>
    <string name="cb_snooze_network_error">Network Error</string>
    <string name="cb_snooze_payuid">PAYUID</string>
    <string name="cb_snooze_phpsessid">PHPSESSID</string>
    <string name="cb_snooze_retry_anyway">RETRY ANYWAY</string>
    <string name="cb_snooze_slow_user_warning">Your session is about to expire. Please complete the transaction quickly to avoid failure.</string>
    <string name="cb_snooze_slow_user_warning_header">Finish Transaction</string>
    <string name="cb_snooze_try_later">TRY LATER</string>
    <string name="cb_snooze_verify_api_status">api_status</string>
    <string name="cb_toggle_field">toggleField</string>
    <string name="cb_top_arrow">CB arrow</string>
    <string name="cb_transaction_failed">It seems the bank did not recognize the transaction. You may contact the bank/ merchant for more details.</string>
    <string name="cb_transaction_failed_debited">Or you can retry now to restart your transaction.</string>
    <string name="cb_transaction_failed_retry">Or you can retry now to restart your transaction.</string>
    <string name="cb_transaction_failed_title">Transaction not confirmed</string>
    <string name="cb_transaction_paused">Transaction Paused</string>
    <string name="cb_transaction_status">Please wait while we confirm this transaction from the bank. We will notify you once the bank confirms the status of your transaction.</string>
    <string name="cb_transaction_success_msg">We have verified the transaction with the bank. You will now be redirected to the merchant application.</string>
    <string name="cb_transaction_sucess">Transaction successful!</string>
    <string name="cb_try_later">Try Later?</string>
    <string name="cb_use_sms_otp">USE SMS OTP</string>
    <string name="cb_waiting_for_otp">Waiting for OTP</string>
    <string name="choose_bank">Choose Your Bank</string>
    <string name="citi">CITI</string>
    <string name="click_here">Click here</string>
    <string name="cvv">CVV</string>
    <string name="enable_one_click_checkout">Enable one click checkout.</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="expires">Expires:</string>
    <string name="hdfc">HDFC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="icici">ICICI</string>
    <string name="if_cvv_and_expiry_on_card"> if you have CVV and Expiry on your card</string>
    <string name="if_dont_cvv_and_expiry_on_card">" if you don't have CVV and Expiry on your card"</string>
    <string name="month_format">MM</string>
    <string name="name_on_card">Name On Card</string>
    <string name="net_banking">Net Banking</string>
    <string name="ok">Ok</string>
    <string name="pay_now">Pay</string>
    <string name="redirection_text">You will be redirected to your banks website to complete payment</string>
    <string name="save_card">Save card for faster checkouts.</string>
    <string name="sbi">SBI</string>
    <string name="select_bank">Select Other Banks</string>
    <string name="test">Test</string>
    <string name="text_enter_cvv">Please enter your CVV</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_card">CardActivity</string>
    <string name="title_activity_cash_card">CashCardActivity</string>
    <string name="title_activity_emi">EmiActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_merchant_payment">MerchantPaymentActivity</string>
</resources>