<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/shape_progress" android:paddingTop="30.0dip" android:paddingBottom="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginRight="30.0dip" android:layout_centerInParent="true">
        <ImageView android:id="@id/imageView" android:background="@android:color/white" android:paddingTop="10.0dip" android:src="@drawable/l_icon1" android:scaleType="centerInside" android:contentDescription="@string/cb_payu_icon" style="@style/cb_image_view" />
        <TextView android:textSize="20.0sp" android:textStyle="normal" android:layout_gravity="center_horizontal" android:id="@id/dialog_title" android:background="@android:color/white" android:paddingTop="30.0dip" android:text="@string/cb_process_request" style="@style/cb_text_view" />
        <TextView android:textSize="15.0sp" android:textStyle="italic" android:ellipsize="marquee" android:layout_gravity="center_horizontal" android:id="@id/dialog_desc" android:background="@android:color/white" android:paddingTop="10.0dip" android:focusable="true" android:focusableInTouchMode="true" android:text="@string/cb_please_wait" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" style="@style/cb_text_view" />
    </LinearLayout>
</RelativeLayout>